------------------------------------------------------------------------
r1602 | gaser | 2020-04-13 01:38:48

Changed paths:
M       CHANGES.txt
M       cat_spm_results_ui.m

Fixed: Corrected some inconsistencies in cat_spm_results_ui.m.
------------------------------------------------------------------------
r1601 | gaser | 2020-04-13 00:22:54 +0200 (Mo, 13 Apr 2020) | 12 lines

Changed paths:
M       CHANGES.txt
M       cat_stat_analyze_ROIs.m
M       standalone/cat_standalone.sh
RM      templates_volumes/aal3.csv
RM      templates_volumes/aal3.nii
RM      templates_volumes/aal3.txt

(1) Fixed: Corrected bug in ROI analysis that occured if only a few regions were
    found to be significant.
(2) Fixed: Removed unnecessary cell-structure in cat_standalone.sh

------------------------------------------------------------------------
r1600 | gaser | 2020-04-10 01:31:30 +0200 (Fr, 10 Apr 2020) | 7 lines

Changed paths:
M       CHANGES.txt
M       cat_spm_results_ui.m

Changed: Added check to cat_spm_results_ui if TFCE is installed (for general 
use in CAT12).

------------------------------------------------------------------------
r1599 | gaser | 2020-04-10 01:18:34 +0200 (Fr, 10 Apr 2020) | 12 lines

Changed paths:
M       CHANGES.txt
M       cat12.m
A  +    cat_spm_results_ui.m
        > moved from cat_stat_spm_results_ui.m
D       cat_stat_spm_results_ui.m
        > moved to cat_spm_results_ui.m

(1) Changed: Renamed cat_stat_spm_results_ui.m to cat_spm_results_ui.m and
    added functionality to optionally call TFCE results.
(2) Changed: Added option to call results to CAT12 GUI.

------------------------------------------------------------------------
r1598 | gaser | 2020-04-09 16:41:45 +0200 (Do, 09 Apr 2020) | 17 lines

Changed paths:
M       CHANGES.txt
M       cat_io_matlabversion.m
M       cat_run1173plus/cat_conf_opts1173plus.m
M       cat_run_job.m
M       cat_run_newcatch.m
M       cat_spm_smoothto8bit.m
M       cat_surf_render.m