@@ -748,7 +748,7 @@ switch lower(Action), case 'setup'                         %-Set up results
         else Finter = varargin{5}; end
         if nargin < 6, WS = spm('WinScale');  else  WS = varargin{6}; end
         if nargin < 7, FS = spm('FontSizes'); else  FS = varargin{7}; end
- 
+
         %-p-values
         %------------------------------------------------------------------
         hPan = uipanel('Parent',hReg,'Title','p-values','Units','Pixels',...
@@ -759,23 +759,34 @@ switch lower(Action), case 'setup'                         %-Set up results
             'FontSize',FS(10),...
             'ForegroundColor',[1 1 1],...
             'BackgroundColor',[179 179 179]/255);
+				if use_tfce
+					callback = 'TabDat = tfce_list(''List'',xSPM,hReg);cat_spm_results_ui(''spm_list_cleanup'',hReg);';
+				else
+					callback = 'TabDat = spm_list(''List'',xSPM,hReg);cat_spm_results_ui(''spm_list_cleanup'',hReg);';
+				end
         uicontrol('Parent',hPan,'Style','PushButton','String','whole brain',...
             'Units','Pixels',...
             'FontSize',FS(10),...
             'ToolTipString',...
             'Tabulate summary of local maxima, p-values & statistics',...
-            'Callback','TabDat = call_list(''List'',xSPM,hReg);cat_spm_results_ui(''spm_list_cleanup'',hReg);',...
+            'Callback',callback,...
             'Interruptible','on','Enable','on',... 
             'Position',[005 055 100 020].*WS);
+				if use_tfce
+					callback = 'TabDat = tfce_list(''ListCluster'',xSPM,hReg);cat_spm_results_ui(''spm_list_cleanup'',hReg);';
+				else
+					callback = 'TabDat = spm_list(''ListCluster'',xSPM,hReg);cat_spm_results_ui(''spm_list_cleanup'',hReg);';
+				end
         uicontrol('Parent',hPan,'Style','PushButton','String','current cluster',...
             'Units','Pixels',...
             'FontSize',FS(10),...
             'ToolTipString',...
             'Tabulate p-values & statistics for local maxima of nearest cluster',...
-            'Callback','TabDat = call_list(''ListCluster'',xSPM,hReg);cat_spm_results_ui(''spm_list_cleanup'',hReg);',...
+            'Callback',callback,...
             'Interruptible','off','Enable','on',...
             'Position',[005 030 100 020].*WS); 
  
+
         %-SPM area - used for Volume of Interest analyses
         %------------------------------------------------------------------
         if spm_mesh_detect(xSPM.Vspm) | use_tfce
